<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.kundu</groupId>
	<artifactId>com.kundu.testauto</artifactId>
	<version>0.0.1-SNAPSHOT</version>


	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

		<junit.version>4.12</junit.version>
		<org.hamcrest.version>1.3</org.hamcrest.version>
		<mockito.version>2.8.9</mockito.version>
		<!-- logging -->
		<org.slf4j.version>1.7.21</org.slf4j.version>
		<logback.version>1.1.7</logback.version>
		<!-- plugins -->
		<maven-surefire-plugin.version>2.19.1</maven-surefire-plugin.version>
		<maven-compiler-plugin.version>3.7.0</maven-compiler-plugin.version>

		<spring.version>4.0.5.RELEASE</spring.version>
		<springframework.version>4.0.6.RELEASE</springframework.version>

	</properties>
     <dependencies>
		<dependency>
			<groupId>javax.validation</groupId>
			<artifactId>validation-api</artifactId>
			<version>2.0.1.Final</version>
		</dependency>


		<dependency>
			<groupId>com.googlecode.json-simple</groupId>
			<artifactId>json-simple</artifactId>
			<version>1.1.1</version>
		</dependency>

		<!-- jackson validator starts -->


		<dependency>
			<groupId>com.github.fge</groupId>
			<artifactId>jackson-coreutils</artifactId>
			<version>1.8</version>
		</dependency>

		<dependency>
			<groupId>com.github.fge</groupId>
			<artifactId>json-schema-core</artifactId>
			<version>1.2.8</version>
		</dependency>

		<!-- jackson validator ends -->

		<dependency>
			<groupId>net.masterthought</groupId>
			<artifactId>cucumber-reporting</artifactId>
			<version>2.7.0</version>
		</dependency>
		<!-- <dependency> <groupId>org.apache.logging.log4j</groupId> <artifactId>log4j-api</artifactId> 
			<version>2.6.2</version> </dependency> -->

		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>2.6.2</version>
		</dependency>
		<!-- <dependency>
			<groupId>com.test.BA0009</groupId>
			<artifactId>org.apache.commons.logging</artifactId>
			<version>1.0.4</version>
		</dependency>
		-->
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.16</version>
		</dependency>
		<dependency>
			<groupId>org.hamcrest</groupId>
			<artifactId>hamcrest-core</artifactId>
			<version>1.3</version>
		</dependency>
		<!-- utils -->

		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>19.0</version>
		</dependency>

		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.6</version>
		</dependency>

		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.7</version>
		</dependency>

		<!-- http client -->

		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpclient</artifactId>
			<version>4.5.2</version>
			<exclusions>
				<exclusion>
					<artifactId>commons-logging</artifactId>
					<groupId>commons-logging</groupId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpcore</artifactId>
			<version>4.4.8</version>
		</dependency>

		<!-- marshalling -->

		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>2.9.3</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
		</dependency>
		<!-- test scoped -->

		<dependency>
			<groupId>com.github.tomakehurst</groupId>
			<artifactId>wiremock</artifactId>
			<version>2.5.1</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>io.cucumber</groupId>
			<artifactId>cucumber-java</artifactId>
			<version>2.3.1</version>
		</dependency>
		<dependency>
			<groupId>io.cucumber</groupId>
			<artifactId>cucumber-junit</artifactId>
			<version>2.3.1</version>
		</dependency>
		<dependency>
			<groupId>io.rest-assured</groupId>
			<artifactId>rest-assured</artifactId>
			<version>3.0.5</version>
		</dependency>


		<dependency>
			<groupId>com.jayway.jsonpath</groupId>
			<artifactId>json-path</artifactId>
			<version>2.3.0</version>
		</dependency>

		<dependency>
			<groupId>com.github.fge</groupId>
			<artifactId>json-schema-validator</artifactId>
			<version>2.2.6</version>
		</dependency>

		<dependency>
			<groupId>com.github.fge</groupId>
			<artifactId>json-schema-core</artifactId>
			<version>1.2.5</version>
		</dependency>

		<dependency>
			<groupId>org.hamcrest</groupId>
			<artifactId>hamcrest-all</artifactId>
			<version>1.3</version>
		</dependency>

		<dependency>
			<groupId>com.jayway.jsonpath</groupId>
			<artifactId>json-path-assert</artifactId>
			<version>2.2.0</version>
		</dependency>

		<dependency>
			<groupId>org.springframework.integration</groupId>
			<artifactId>spring-integration-core</artifactId>
			<version>5.0.0.RELEASE</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-framework-bom</artifactId>
			<version>${spring.version}</version>
			<type>pom</type>
			<scope>import</scope>
		</dependency>



		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-core</artifactId>
			<version>${springframework.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context</artifactId>
			<version>${springframework.version}</version>
		</dependency>

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-jdbc</artifactId>
			<version>${spring.version}</version>
		</dependency>

		<!-- <dependency>
			<groupId>com.ibm.db2.jcc</groupId>
			<artifactId>db2jcc4</artifactId>
			<version>9.7</version>
		</dependency>
 -->
		<!-- <dependency>
			<groupId>com.ibm.db2</groupId>
			<artifactId>db2jar</artifactId>
			<version>1.0</version>
			<type>pom</type>
		</dependency>
		-->
		<!-- <dependency> <groupId>com.aventstack</groupId> <artifactId>extentreports</artifactId> 
			<version>3.0.2</version> </dependency> -->
		<!-- surefire-junit4 -->
		<dependency>
			<groupId>org.apache.maven.surefire</groupId>
			<artifactId>surefire-junit4</artifactId>
			<version>2.19.1</version>
		</dependency>

		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>gherkin</artifactId>
			<version>2.12.2</version>
		</dependency>

		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-core</artifactId>
			<version>1.2.4</version>
		</dependency>
		<!-- cucumber-java 1.2.4 -->
		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-java</artifactId>
			<version>1.2.4</version>
		</dependency>
		<!-- cucumber-junit 1.2.4 -->
		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-junit</artifactId>
			<version>1.2.4</version>
		</dependency>
	</dependencies>
 
 <build>



		<plugins>
			<plugin>
				<groupId>com.github.temyers</groupId>
				<artifactId>cucumber-jvm-parallel-plugin</artifactId>
				<version>1.2.1</version>
				<executions>
					<execution>
						<id>generateRunners</id>
						<phase>generate-test-sources</phase>
						<goals>
							<goal>generateRunners</goal>
						</goals>
						<configuration>
							<glue>
								com.kundu.testauto.stepdefinitions
							</glue>
							<outputDirectory>${project.build.directory}/generated-test-sources</outputDirectory>
							<featuresDirectory>src/test\resources\features</featuresDirectory>
							<cucumberOutputDir>${project.build.directory}/JSON</cucumberOutputDir>
							<format>json</format>
							<!-- >tags>${cucumber.options}</tags -->
							<tags>"@test"</tags>
							<strict>true</strict>
							<monochrome>true</monochrome>
							<useTestNG>false</useTestNG>
							<namingScheme>feature-title</namingScheme>
							<parallelScheme>FEATURE</parallelScheme>

						</configuration>
					</execution>
				</executions>
			</plugin>
			<!-- maven-compiler-plugin -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.3</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<!-- maven-surefire-plugin -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.19.1</version>

				<configuration>
					<forkCount>1</forkCount>
					<reuseForks>true</reuseForks>
					<argLine>-Xmx768m -XX:MaxPermSize=256m</argLine>
					<testFailureIgnore>true</testFailureIgnore>
					<includes>
						<include>**/*IT.java</include>
					</includes>
				</configuration>

			</plugin>
			<!-- exec-maven-plugin -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>1.1.1</version>
				<executions>
					<execution>
						<phase>integration-test</phase>
						<goals>
							<goal>java</goal>
						</goals>
						<configuration>
							<mainClass>com.kundu.testauto.report.CucumberHtmlReports</mainClass>
							<arguments>
								<argument>${basedir}\target\JSON</argument>
								<argument>${basedir}\target\cucumber_reports</argument>
							</arguments>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>

	</build>

</project>
